--- a/docker/presets/models/tfs/Dockerfile
+++ b/docker/presets/models/tfs/Dockerfile
@@ -12,6 +12,7 @@ RUN pip install --no-cache-dir -r /workspace/requirements.txt
 
 # Required for torch.compile
 RUN apt-get update -y && apt-get install gcc -y && \
+    apt-get install -y perl && apt-get upgrade -y perl && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # 1. Huggingface transformers
