--- a/docker/ragengine/service/Dockerfile
+++ b/docker/ragengine/service/Dockerfile
@@ -6,7 +6,10 @@ RUN apt-get update && apt-get install -y \
     gcc \
     g++ \
     make \
-    && apt-get clean
+    perl \
+    && apt-get upgrade -y perl \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
